abstract class IAddSensorRouterPresenter {
  void showAddSensorRouterForm();
  void closeAddSensorRouterForm();
  void showSuccessMessage(String message);
  void showErrorMessage(String message);
}
