@startuml
title Add Sensor Router Feature

'--- STYLE CONFIGURATION ---
skinparam class {
    BackgroundColor<<View>> LightBlue
    BackgroundColor<<ViewModel>> #D0F0F5
    BackgroundColor<<Controller>> #FFAB91
    BackgroundColor<<UseCase>> #FEFECD
    BackgroundColor<<Presenter>> #90EE90
    BackgroundColor<<Service>> #FAFAD2
    BackgroundColor<<DTO>> #D3D3D3
}

class MockSensorUI <<View>> {
  +build(): Widget
}

class AddSensorRouterViewModel <<ViewModel>> {
  +message: String
  +isError: bool
  +dispose(): void
  +setMessage(String, bool): void
  +reset(): void
}

class AddSensorRouterEventController <<Controller>> {
  +onAddSensorRouterPressed(): void
  +onConfirmAddSensorRouter(CreateSensorRouterRequest): void
  +onCancelPressed(): void
}

interface IAddSensorRouter <<UseCase>> {
  +addSensorRouter(CreateSensorRouterRequest): void
  +showAddSensorRouterForm(): void
  +cancelAddSensorRouter(): void
}

class AddSensorRouterUseCase <<UseCase>> {
  +addSensorRouter(CreateSensorRouterRequest): void
  +showAddSensorRouterForm(): void
  +cancelAddSensorRouter(): void
}

IAddSensorRouter <|.. AddSensorRouterUseCase

interface IAddSensorRouterPresenter <<Presenter>> {
  +showAddSensorRouterForm(): void
  +closeAddSensorRouterForm(): void
  +showSuccessMessage(String): void
  +showErrorMessage(String): void
}

class AddSensorRouterPresenter <<Presenter>> {
  +showAddSensorRouterForm(): void
  +closeAddSensorRouterForm(): void
  +showSuccessMessage(String): void
  +showErrorMessage(String): void
}

IAddSensorRouterPresenter <|.. AddSensorRouterPresenter

interface ISensor <<Service>> {
  +createSensorRouter(CreateSensorRouterRequest): Future<void>
}

class SensorService <<Service>> {
  +createSensorRouter(CreateSensorRouterRequest): Future<void>
}

ISensor <|.. SensorService

class CreateSensorRouterRequest <<DTO>> {
  +sensorId: int
  +datasetId: int
}

MockSensorUI ..> AddSensorRouterEventController
MockSensorUI ..> AddSensorRouterViewModel

AddSensorRouterViewModel ..> CreateSensorRouterRequest

AddSensorRouterEventController ..> IAddSensorRouter
AddSensorRouterEventController ..> AddSensorRouterViewModel

AddSensorRouterUseCase ..> ISensor
AddSensorRouterUseCase ..> IAddSensorRouterPresenter

AddSensorRouterPresenter ..> AddSensorRouterViewModel

SensorService ..> CreateSensorRouterRequest

@enduml
